// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`activity/ActivityContainer Empty smoke-test 1`] = `
<div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row ListHeader-sectionHeader css-9ctq1q-MuiGrid-root">
  <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
    <div class="MuiBox-root css-2rlxtj">
      <h1 class="MuiTypography-root MuiTypography-h1 css-12oqc8p-MuiTypography-root">
        Activity
      </h1>
    </div>
  </div>
</div>
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-12jlilq-MuiPaper-root"
     style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <div class="MuiBox-root css-1kbmarl">
    <div class="MuiBox-root css-19midj6">
      <p class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-16oqsey-MuiTypography-root"
         data-testid="empty"
         style="--Typography-textAlign: center;"
      >
        No activity found for the last week.
        <br>
        <br>
        You will see here important events related to the rollout of your updates. Stay tuned!
      </p>
    </div>
  </div>
</div>
`;

exports[`activity/ActivityContainer List smoke-test 1`] = `
<div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row ListHeader-sectionHeader css-9ctq1q-MuiGrid-root">
  <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
    <div class="MuiBox-root css-2rlxtj">
      <h1 class="MuiTypography-root MuiTypography-h1 css-12oqc8p-MuiTypography-root">
        Activity
      </h1>
    </div>
  </div>
</div>
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-12jlilq-MuiPaper-root"
     style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <div class="MuiBox-root css-1kbmarl">
    <div class="MuiStack-root css-nen11g-MuiStack-root">
      <div class="MuiBox-root css-0">
        <p class="MuiTypography-root MuiTypography-body1 css-1c4wxug-MuiTypography-root">
          Wednesday, May 13, 2020
        </p>
        <ul class="MuiList-root MuiList-padding css-b7dj7n-MuiList-root">
          <li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart css-kd2s28-MuiListItem-root">
            <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-tqvfrr-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 css-r13beu-MuiGrid-root">
                <div class="MuiBox-root css-geek62">
                  <div class="MuiBox-root css-12z0wuy">
                    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-kvy912-MuiSvgIcon-root"
                         focusable="false"
                         aria-hidden="true"
                         viewbox="0 0 24 24"
                         data-testid="ErrorOutlinedIcon"
                    >
                      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z">
                      </path>
                    </svg>
                  </div>
                  <div class="MuiBox-root css-0">
                    <p class="MuiTypography-root MuiTypography-body1 css-juydac-MuiTypography-root">
                      ABC
                    </p>
                  </div>
                </div>
              </div>
              <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-15bfe7d-MuiGrid-root">
                <p class="MuiTypography-root MuiTypography-body1 css-9rj0ym-MuiTypography-root">
                  02:56 PM
                </p>
              </div>
              <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
                Channel beta is now pointing to version 0.0.0
              </div>
            </div>
          </li>
          <li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart css-kd2s28-MuiListItem-root">
            <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-tqvfrr-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 css-r13beu-MuiGrid-root">
                <div class="MuiBox-root css-geek62">
                  <div class="MuiBox-root css-12z0wuy">
                    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-kvy912-MuiSvgIcon-root"
                         focusable="false"
                         aria-hidden="true"
                         viewbox="0 0 24 24"
                         data-testid="ErrorOutlinedIcon"
                    >
                      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z">
                      </path>
                    </svg>
                  </div>
                  <div class="MuiBox-root css-0">
                    <p class="MuiTypography-root MuiTypography-body1 css-juydac-MuiTypography-root">
                      DEF
                    </p>
                  </div>
                </div>
              </div>
              <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-15bfe7d-MuiGrid-root">
                <p class="MuiTypography-root MuiTypography-body1 css-9rj0ym-MuiTypography-root">
                  02:55 PM
                </p>
              </div>
              <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
                Channel beta is now pointing to version 0.0.0
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div class="MuiBox-root css-0">
        <div class="MuiTablePagination-root css-7mt0f-MuiTablePagination-root">
          <div class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular MuiTablePagination-toolbar css-1594vo9-MuiToolbar-root-MuiTablePagination-toolbar">
            <div class="MuiTablePagination-spacer css-1wtxofq-MuiTablePagination-spacer">
            </div>
            <p id="_r_3_"
               class="MuiTablePagination-selectLabel css-1dl7m68-MuiTablePagination-selectLabel"
            >
              Rows per page:
            </p>
            <div class="MuiInputBase-root MuiInputBase-colorPrimary MuiTablePagination-select MuiSelect-root MuiTablePagination-input css-88pk78-MuiInputBase-root-MuiTablePagination-select">
              <div tabindex="0"
                   role="combobox"
                   aria-expanded="false"
                   aria-haspopup="listbox"
                   aria-labelledby="_r_3_ _r_2_"
                   id="_r_2_"
                   class="MuiSelect-select MuiTablePagination-select MuiSelect-standard MuiInputBase-input css-18zjd9i-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input"
              >
                5
              </div>
              <input aria-invalid="false"
                     aria-hidden="true"
                     tabindex="-1"
                     class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                     id="_r_5_"
                     value="5"
              >
              <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiTablePagination-selectIcon css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                   focusable="false"
                   aria-hidden="true"
                   viewbox="0 0 24 24"
                   data-testid="ArrowDropDownIcon"
              >
                <path d="M7 10l5 5 5-5z">
                </path>
              </svg>
            </div>
            <p class="MuiTablePagination-displayedRows css-z6ezh0-MuiTablePagination-displayedRows">
              1–2 of 2
            </p>
            <div class="MuiTablePaginationActions-root MuiTablePagination-actions css-sjsoon-MuiTablePaginationActions-root">
              <button class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorInherit MuiIconButton-sizeMedium css-h7cjts-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="-1"
                      type="button"
                      disabled
                      aria-label="previous page"
                      title="previous page"
              >
                <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                     focusable="false"
                     aria-hidden="true"
                     viewbox="0 0 24 24"
                     data-testid="KeyboardArrowLeftIcon"
                >
                  <path d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z">
                  </path>
                </svg>
              </button>
              <button class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorInherit MuiIconButton-sizeMedium css-h7cjts-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="-1"
                      type="button"
                      disabled
                      aria-label="next page"
                      title="next page"
              >
                <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                     focusable="false"
                     aria-hidden="true"
                     viewbox="0 0 24 24"
                     data-testid="KeyboardArrowRightIcon"
                >
                  <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z">
                  </path>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`activity/ActivityContainer MultipleDays smoke-test 1`] = `
<div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row ListHeader-sectionHeader css-9ctq1q-MuiGrid-root">
  <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
    <div class="MuiBox-root css-2rlxtj">
      <h1 class="MuiTypography-root MuiTypography-h1 css-12oqc8p-MuiTypography-root">
        Activity
      </h1>
    </div>
  </div>
</div>
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-12jlilq-MuiPaper-root"
     style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <div class="MuiBox-root css-1kbmarl">
    <div class="MuiStack-root css-nen11g-MuiStack-root">
      <div class="MuiBox-root css-0">
        <p class="MuiTypography-root MuiTypography-body1 css-1c4wxug-MuiTypography-root">
          Wednesday, May 13, 2020
        </p>
        <ul class="MuiList-root MuiList-padding css-b7dj7n-MuiList-root">
          <li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart css-kd2s28-MuiListItem-root">
            <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-tqvfrr-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 css-r13beu-MuiGrid-root">
                <div class="MuiBox-root css-geek62">
                  <div class="MuiBox-root css-12z0wuy">
                    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-kvy912-MuiSvgIcon-root"
                         focusable="false"
                         aria-hidden="true"
                         viewbox="0 0 24 24"
                         data-testid="ErrorOutlinedIcon"
                    >
                      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z">
                      </path>
                    </svg>
                  </div>
                  <div class="MuiBox-root css-0">
                    <p class="MuiTypography-root MuiTypography-body1 css-juydac-MuiTypography-root">
                      ABC
                    </p>
                  </div>
                </div>
              </div>
              <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-15bfe7d-MuiGrid-root">
                <p class="MuiTypography-root MuiTypography-body1 css-9rj0ym-MuiTypography-root">
                  02:56 PM
                </p>
              </div>
              <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
                Channel beta is now pointing to version 0.0.0
              </div>
            </div>
          </li>
          <li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart css-kd2s28-MuiListItem-root">
            <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-tqvfrr-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 css-r13beu-MuiGrid-root">
                <div class="MuiBox-root css-geek62">
                  <div class="MuiBox-root css-12z0wuy">
                    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-kvy912-MuiSvgIcon-root"
                         focusable="false"
                         aria-hidden="true"
                         viewbox="0 0 24 24"
                         data-testid="ErrorOutlinedIcon"
                    >
                      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z">
                      </path>
                    </svg>
                  </div>
                  <div class="MuiBox-root css-0">
                    <p class="MuiTypography-root MuiTypography-body1 css-juydac-MuiTypography-root">
                      DEF
                    </p>
                  </div>
                </div>
              </div>
              <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-15bfe7d-MuiGrid-root">
                <p class="MuiTypography-root MuiTypography-body1 css-9rj0ym-MuiTypography-root">
                  02:55 PM
                </p>
              </div>
              <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
                Channel beta is now pointing to version 0.0.0
              </div>
            </div>
          </li>
        </ul>
        <p class="MuiTypography-root MuiTypography-body1 css-1c4wxug-MuiTypography-root">
          Thursday, May 14, 2020
        </p>
        <ul class="MuiList-root MuiList-padding css-b7dj7n-MuiList-root">
          <li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart css-kd2s28-MuiListItem-root">
            <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-tqvfrr-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 css-r13beu-MuiGrid-root">
                <div class="MuiBox-root css-geek62">
                  <div class="MuiBox-root css-12z0wuy">
                    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-md6zzs-MuiSvgIcon-root"
                         focusable="false"
                         aria-hidden="true"
                         viewbox="0 0 24 24"
                         data-testid="CheckCircleOutlinedIcon"
                    >
                      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z">
                      </path>
                    </svg>
                  </div>
                  <div class="MuiBox-root css-0">
                    <p class="MuiTypography-root MuiTypography-body1 css-juydac-MuiTypography-root">
                      DEB
                    </p>
                  </div>
                </div>
              </div>
              <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-15bfe7d-MuiGrid-root">
                <p class="MuiTypography-root MuiTypography-body1 css-9rj0ym-MuiTypography-root">
                  02:56 PM
                </p>
              </div>
              <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
                Channel beta is now pointing to version 0.0.1
              </div>
            </div>
          </li>
          <li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart css-kd2s28-MuiListItem-root">
            <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-tqvfrr-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 css-r13beu-MuiGrid-root">
                <div class="MuiBox-root css-geek62">
                  <div class="MuiBox-root css-12z0wuy">
                    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-tye81v-MuiSvgIcon-root"
                         focusable="false"
                         aria-hidden="true"
                         viewbox="0 0 24 24"
                         data-testid="WarningAmberOutlinedIcon"
                    >
                      <path d="M12 5.99 19.53 19H4.47zM12 2 1 21h22zm1 14h-2v2h2zm0-6h-2v4h2z">
                      </path>
                    </svg>
                  </div>
                  <div class="MuiBox-root css-0">
                    <p class="MuiTypography-root MuiTypography-body1 css-juydac-MuiTypography-root">
                      DOF
                    </p>
                  </div>
                </div>
              </div>
              <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-15bfe7d-MuiGrid-root">
                <p class="MuiTypography-root MuiTypography-body1 css-9rj0ym-MuiTypography-root">
                  02:55 PM
                </p>
              </div>
              <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
                Channel beta is now pointing to version 0.0.1
              </div>
            </div>
          </li>
          <li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart css-kd2s28-MuiListItem-root">
            <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-tqvfrr-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 css-r13beu-MuiGrid-root">
                <div class="MuiBox-root css-geek62">
                  <div class="MuiBox-root css-12z0wuy">
                    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-md6zzs-MuiSvgIcon-root"
                         focusable="false"
                         aria-hidden="true"
                         viewbox="0 0 24 24"
                         data-testid="CheckCircleOutlinedIcon"
                    >
                      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z">
                      </path>
                    </svg>
                  </div>
                  <div class="MuiBox-root css-0">
                    <p class="MuiTypography-root MuiTypography-body1 css-juydac-MuiTypography-root">
                      DAL
                    </p>
                  </div>
                </div>
              </div>
              <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-15bfe7d-MuiGrid-root">
                <p class="MuiTypography-root MuiTypography-body1 css-9rj0ym-MuiTypography-root">
                  02:56 PM
                </p>
              </div>
              <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
                Channel alpha is now pointing to version 0.0.1
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div class="MuiBox-root css-0">
        <div class="MuiTablePagination-root css-7mt0f-MuiTablePagination-root">
          <div class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular MuiTablePagination-toolbar css-1594vo9-MuiToolbar-root-MuiTablePagination-toolbar">
            <div class="MuiTablePagination-spacer css-1wtxofq-MuiTablePagination-spacer">
            </div>
            <p id="_r_a_"
               class="MuiTablePagination-selectLabel css-1dl7m68-MuiTablePagination-selectLabel"
            >
              Rows per page:
            </p>
            <div class="MuiInputBase-root MuiInputBase-colorPrimary MuiTablePagination-select MuiSelect-root MuiTablePagination-input css-88pk78-MuiInputBase-root-MuiTablePagination-select">
              <div tabindex="0"
                   role="combobox"
                   aria-expanded="false"
                   aria-haspopup="listbox"
                   aria-labelledby="_r_a_ _r_9_"
                   id="_r_9_"
                   class="MuiSelect-select MuiTablePagination-select MuiSelect-standard MuiInputBase-input css-18zjd9i-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input"
              >
                5
              </div>
              <input aria-invalid="false"
                     aria-hidden="true"
                     tabindex="-1"
                     class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                     id="_r_c_"
                     value="5"
              >
              <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiTablePagination-selectIcon css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                   focusable="false"
                   aria-hidden="true"
                   viewbox="0 0 24 24"
                   data-testid="ArrowDropDownIcon"
              >
                <path d="M7 10l5 5 5-5z">
                </path>
              </svg>
            </div>
            <p class="MuiTablePagination-displayedRows css-z6ezh0-MuiTablePagination-displayedRows">
              1–5 of 6
            </p>
            <div class="MuiTablePaginationActions-root MuiTablePagination-actions css-sjsoon-MuiTablePaginationActions-root">
              <button class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorInherit MuiIconButton-sizeMedium css-h7cjts-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="-1"
                      type="button"
                      disabled
                      aria-label="previous page"
                      title="previous page"
              >
                <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                     focusable="false"
                     aria-hidden="true"
                     viewbox="0 0 24 24"
                     data-testid="KeyboardArrowLeftIcon"
                >
                  <path d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z">
                  </path>
                </svg>
              </button>
              <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-h7cjts-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="0"
                      type="button"
                      aria-label="next page"
                      title="next page"
              >
                <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                     focusable="false"
                     aria-hidden="true"
                     viewbox="0 0 24 24"
                     data-testid="KeyboardArrowRightIcon"
                >
                  <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z">
                  </path>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
